Archive2/51/f2dde12995c7cb/output
+ g++-4.8 -std=c++11 -Wall -Wextra main.cpp
main.cpp: In function 'int main()':
main.cpp:6:1: error: expected ',' or ';' before '}' token
 }
 ^
main.cpp:2:24: warning: unused variable 'my_regex' [-Wunused-variable]
     static const char* my_regex = 
                        ^
