Archive2/51/f2dde12995c7cb/main.cpp
int main() {
    static const char* my_regex = 
        "a regex"               // This parses that
        "another regex"         // Another one
        "yet another regex"     // That
}